[WPE] `TestWebKitWebView` `/webkit/WebKitWebView/fullscreen` is a timeout https://bugs.webkit.org/show_bug.cgi?id=258850

Reviewed by Michael Catanzaro.

On WPE `WKWPE::View` creates a web page with its own page client.

But when using GLib API we must somehow notify the wrapper `WebKitWebView`
about entering and exiting fullscreen mode.

The solution is to extend `WKWPE::API::Client` with two new methods:
- `enterFullScreen()`
- `exitFullScreen()`

`WebKitWebViewClient`, which implements `WKWPE::API::Client` and has
a reference to `WebKitWebView` wrapper, can react on these events and
call appropriate handlers.

* Source/WebKit/UIProcess/API/glib/WebKitWebView.cpp:
(WebKitWebViewClient::enterFullScreen):
(WebKitWebViewClient::exitFullScreen):
* Source/WebKit/UIProcess/API/wpe/APIViewClient.h:
(API::ViewClient::enterFullScreen):
(API::ViewClient::exitFullScreen):
* Source/WebKit/UIProcess/API/wpe/PageClientImpl.cpp:
(WebKit::PageClientImpl::enterFullScreen):
(WebKit::PageClientImpl::exitFullScreen):
* Source/WebKit/UIProcess/API/wpe/WPEView.cpp:
(WKWPE::View::enterFullScreen):
(WKWPE::View::exitFullScreen):
* Source/WebKit/UIProcess/API/wpe/WPEView.h:
* Source/WebKit/UIProcess/API/wpe/WebKitWebViewClient.h:
* Tools/TestWebKitAPI/glib/TestExpectations.json:

Canonical link: https://commits.webkit.org/265799@main